# GATE-MANAGER

./: README.md
gate_manager/: CMakeLists.txt  package.xml
gate_manager/include/gate_manager/: motor_manager_node.hpp  robot_manager_node.hpp
gate_manager/launch/: gate_manager.launch.py
gate_manager/params/: gate_manager_parameters.yaml
gate_manager/src/: motor_manager_node.cpp  robot_manager_node.cpp
gate_msgs/: CMakeLists.txt  package.xml
gate_msgs/msg/: MotorState.msg  MotorStateMultiArray.msg
